GWT-ing libgdx-tools: a Beginning